# collidor

./: .gitattributes  .gitignore  LICENSE  README.md  install_script.sh  run_cpplint.py
CAD/: block.STL  block.bvh  cessna.bvh  env.bvh  puck.STL  puck.bvh  random_tasks_generator.m  rob.bvh  sample1.bvh  sample2.bvh  tasks0.csv  testCase0.csv  transforms_generator.m  transforms_set0.csv  transforms_set1.csv  transforms_set2.csv  transforms_set3.csv  visualize.m
cuda_build/: Makefile  block_puck.out  block_puck.outp.csv  block_s1.out  output_queue.csv  puck_puck.out  s1_block.outp.csv  s1_puck.outp.csv  s1s2.out  s1s2.outp.csv  s2_block.outp.csv  s2_puck.outp.csv
params/: block_puck.yaml  block_puck_t0.yaml  block_s1.yaml  block_s1_t0.yaml  cessna_cessna.yaml  cooper_cessna.yaml  env_rob.yaml  puck_puck.yaml  puck_puck_t0.yaml  s1s2.yaml  s1s2_t0.yaml  trumpet_cessna.yaml
src/: BVH-cuda-inl.h  BVH-inl.h  BVH.h  CMakeLists.txt  LineSeg-inl.h  RSS-cuda-inl.h  RSS-inl.h  RSS.h  Rectangle_tests.h  Triangle-cuda-inl.h  Triangle-inl.h  Triangle.h  Triangles_test.h  compile_CPP.h  compile_CUDA.h  dist_bvh.cu  parser.cpp  test_bvh.cu  test_fcl_utility.cpp  test_rss.cpp  test_rss.cu  test_triangles.cu  test_vector_math.cpp  vector_math-inl.h  vector_math.h
src/test/: Rectangle_tests.h  Triangles_test.h  test_bvh.cu  test_rss.cpp  test_rss.cu  test_vector_math.cpp
src/utils/: SampleObjects.h  compile_CPP.h  compute_FCL_distance.cpp  display_object.cpp  distance_verification.cpp  fcl_cdp_conversion.cpp  fcl_utility-inl.h  fcl_utility.h  parse_utils.h  queue_verification.cpp  test_fcl_utility.h
